--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         
         $(function() {
           var myMap = new MapsLib({
-            fusionTableId:      "1m4Ez9xyTGfY2CU6O-UgEcPzlS0rnzLU93e4Faa0",
-            googleApiKey:       "AIzaSyAjYIJDSpRo90YUDZNtLnSCTmuMHfLMAlo",
+            fusionTableId:      "187bReoH-x0aN3-z3MpeRlR94_VhMHhVdBxdhhixy",
+            googleApiKey:       "AIzaSyDi6Lpchy9mel8eM73upqYCsKO7bjSLZFI",
             locationColumn:     "geometry",
-            map_center:         [41.8781136, -87.66677856445312],
-            locationScope:      "chicago"
+            map_center:         [28.4595, 77.0266],
+            locationScope:      "Gurgaon"
           });
 
           var autocomplete = new google.maps.places.Autocomplete(document.getElementById('search_address'));
