--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           var myMap = new MapsLib({
             fusionTableId:      "187bReoH-x0aN3-z3MpeRlR94_VhMHhVdBxdhhixy",
             googleApiKey:       "AIzaSyDi6Lpchy9mel8eM73upqYCsKO7bjSLZFI",
-            locationColumn:     "geometry",
+            locationColumn:     "ADDRESS",
             map_center:         [28.4595, 77.0266],
             locationScope:      "Gurgaon"
           });
