--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </noscript>
           <div id='map_canvas'></div>
           <p class='pull-right'>
-            <a href='http://derekeder.com/searchable_map_template/'>Searchable Map Template</a> by <a href='http://derekeder.com'>Derek Eder</a>.
+            <a href='http://ravimdi.com/searchable_map_template/'>Searchable Map Template</a> by <a href='http://ravimdi.com'>Derek Eder</a>.
         </p>
         </div>
       </div>
